# AI-Hub

./: .gitignore
aihub-poc/: README.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
aihub-poc/scripts/: after-pack.js  generate-icons.js
aihub-poc/src/main/: index.ts  ipc-handlers.ts  menu-builder.ts  provider-manager.ts  session-manager.ts  tray.ts
aihub-poc/src/preload/: index.ts
aihub-poc/src/renderer/: App.tsx  env.d.ts  index.html
aihub-poc/src/renderer/components/: ProviderErrorMessage.tsx  ProviderLoadingSpinner.tsx
aihub-poc/src/renderer/hooks/: useProviders.ts
aihub-poc/src/renderer/styles/: theme.css
aihub-poc/src/shared/: built-in-providers.ts
aihub-poc/src/shared/types/: ipc.ts  provider.ts
aihub-poc/src/store/: app-store.ts
aihub-tauri/: README.md  index.html  package-lock.json  package.json  vite.config.ts
aihub-tauri/src/: App.tsx  main.tsx  tauri-bridge.ts
aihub-tauri/src-tauri/: Cargo.toml  tauri.conf.json
aihub-tauri/src-tauri/capabilities/: default.json
aihub-tauri/src-tauri/icons/: icon.icns
aihub-tauri/src-tauri/src/: commands.rs  lib.rs  main.rs  menu.rs  provider_manager.rs  session_manager.rs  state.rs  tray.rs
aihub-tauri/src/assets/icons/: ProviderIcons.tsx
aihub-tauri/src/components/: ProviderErrorMessage.module.css  ProviderErrorMessage.tsx  ProviderLoadingSpinner.module.css
aihub-tauri/src/hooks/: useProviders.ts
aihub-tauri/src/shared/: built-in-providers.ts  constants.ts
aihub-tauri/src/styles/: theme.css
(+13 files in other folders)
