[package]
name = "fcc-aihub"
version = "1.0.0"
description = "FCC AI Hub - Unified AI Provider Desktop App"
authors = ["FCC"]
edition = "2021"

[lib]
name = "fcc_aihub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.34"
url = "2"
log = "0.4"
open = "5"
time = "0.3"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
